# semantos

./: LICENSE.md  Makefile  README.md  base_requirements.txt  docker-compose.ebpf.yml  docker-compose.yml  manual.sh  pyproject.toml  requirements.txt  run.sh  start.sh  stop.sh
developer-interface/: Dockerfile
developer-interface/src/: App.vue  main.ts
envoy/: envoy.yaml
experiments/: run_reproduction.sh  run_sysctl_apply.sh  run_sysctl_dryrun.sh  run_sysctl_rollback.sh
experiments/configs/: default.yaml
experiments/data/: sample_telemetry.csv
kb-service/: .dockerignore  Dockerfile  app.py  kb_service.py  requirements.txt
operator-console/: Dockerfile  app.py  index.html  nginx.conf  package.json  requirements.txt  tsconfig.json  tsconfig.ts  vite.config.ts
operator-console/app/: main.py
operator-console/src/: App.vue
operator-console/static/: app.js
proto/: semantos-control.v1.yaml  semantos.proto  semantos_pb2.py  semantos_pb2_grpc.py
reasoner/: Dockerfile  app.py  reasoner_api.py
reasoner-engine/: reasoner_api.py
safety-runtime/: Dockerfile  app.py  requirements.txt
safety-runtime/cmd/: safety-runtime.go
semantos/: __init__.py  cli.py  config.py
semantos/eval/: evaluator.py
semantos/kb/: schema.py  store.py
semantos/reasoning/: engine.py  prompts.py
semantos/rollout/: applier.py  monitor.py  planner.py
semantos/safety/: guardrails.py  privileged.py  sandbox.py
semantos/telemetry/: simulators.py
telemetry-agent/: Dockerfile  app.py  requirements.txt
tests/: test_engine.py  test_guardrails.py
workloads/: run_workload.sh
(+6 files in other folders)
